# hpk

./: README.md
examples/: double_dgemm.cxx
src/: CMakeLists.txt  HPKConfig.h.in
src/core/: hpk.cxx  hpk_utils.hxx  kernel.hxx
src/kernels/dgemm/: dgemm_kernel.hxx
src/types/: blas_matrix.hxx  matrix.hxx  openmp_matrix.hxx  pstl_matrix.hxx  tbb_matrix.hxx  vec_matrix.hxx
